[gd_scene load_steps=3 format=3 uid="uid://d4clx5xqy20x0"]

[ext_resource type="Script" uid="uid://bfbtulhwcpk6y" path="res://Scripts/recruited_ants.gd" id="1_tuxey"]
[ext_resource type="Texture2D" uid="uid://ct1njkabbqljk" path="res://icon.svg" id="3_etctk"]

[node name="RecruitedAnts" type="CanvasLayer"]
script = ExtResource("1_tuxey")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_top = 0.095000006
anchor_bottom = 0.095000006
offset_top = -102.600006
offset_right = 844.0
offset_bottom = 102.399994
theme_override_constants/separation = 200

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/Control"]
layout_mode = 0
offset_left = 7.0
offset_top = 11.0
offset_right = 199.0
offset_bottom = 190.0
stretch = true

[node name="screen_one" type="SubViewport" parent="HBoxContainer/Control/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(192, 179)
size_2d_override = Vector2i(300, 300)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="item_one" type="Sprite2D" parent="HBoxContainer/Control/SubViewportContainer/screen_one"]
z_index = 1
position = Vector2(150, 185.155)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_etctk")

[node name="Control2" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/Control2"]
layout_mode = 0
offset_left = 7.0
offset_top = 11.0
offset_right = 199.0
offset_bottom = 190.0
stretch = true

[node name="screen_two" type="SubViewport" parent="HBoxContainer/Control2/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(192, 179)
size_2d_override = Vector2i(300, 300)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="item_two" type="Sprite2D" parent="HBoxContainer/Control2/SubViewportContainer/screen_two"]
z_index = 1
position = Vector2(150, 185.155)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_etctk")

[node name="Control3" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/Control3"]
layout_mode = 0
offset_left = 7.0
offset_top = 11.0
offset_right = 199.0
offset_bottom = 190.0
stretch = true

[node name="screen_three" type="SubViewport" parent="HBoxContainer/Control3/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(192, 179)
size_2d_override = Vector2i(300, 300)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="item_three" type="Sprite2D" parent="HBoxContainer/Control3/SubViewportContainer/screen_three"]
z_index = 1
position = Vector2(150, 185.155)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_etctk")

[node name="Control4" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/Control4"]
layout_mode = 0
offset_left = 7.0
offset_top = 11.0
offset_right = 199.0
offset_bottom = 190.0
stretch = true

[node name="screen_four" type="SubViewport" parent="HBoxContainer/Control4/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(192, 179)
size_2d_override = Vector2i(300, 300)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="item_four" type="Sprite2D" parent="HBoxContainer/Control4/SubViewportContainer/screen_four"]
z_index = 1
position = Vector2(150, 185.155)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_etctk")

[node name="Control5" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/Control5"]
layout_mode = 0
offset_left = 7.0
offset_top = 11.0
offset_right = 199.0
offset_bottom = 190.0
stretch = true

[node name="screen_five" type="SubViewport" parent="HBoxContainer/Control5/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(192, 179)
size_2d_override = Vector2i(300, 300)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="item_five" type="Sprite2D" parent="HBoxContainer/Control5/SubViewportContainer/screen_five"]
z_index = 1
position = Vector2(150, 185.155)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_etctk")
